# dagster-poc

./: pyproject.toml
dagster_poc/: __init__.py  jobs.py  schedules.py  sensors.py
dagster_poc/assets/: assets.yml  builder.py
dagster_poc/assets/my_asset01/: materializers.py
dagster_poc/resources/: __init__.py  resources.py
dagster_poc/schemas/: assets.py  enums.py
